Начала разметку трех страниц

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,68 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+    <header>
+      <h1>Функциональное питание для котов</h1>
+      <p>Занялся собой? Займись котом!</p>
+      <img src="#">
+      <img scr="#">
+      <ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="catalog.html">Каталог продукции</a></li>
+        <li><a href="form.html">Подбор программы</a></li>
+      </ul>
+      <a href="form.html">Подобрать программу</a>
+    </header>
+    <main>
+      <section>
+        <h2>Виды программ</h2>
+        <div>
+          <h3>Похудение</h3>
+          <p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="#">Каталог SLIM</a>
+        </div>
+        <div>
+          <h3>Набор массы</h3>
+          <p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="#">Каталог PRO</a>
+        </div>
+      </section>
+      <section>
+        <h2>Как это работает?</h2>
+        <ul>
+          <li>Функциональное питание содержит только полезные питательные вещества.</li>
+          <li>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li>Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Живой пример</h2>
+        <p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <div>
+          <h3>5 кг</h3>
+          <p>Снижение веса</p>
+        </div>
+        <div>
+          <h3>60 дней</h3>
+          <p>Затрачено времени</p>
+        </div>
+        <p>Затраты напитание: 15 000 рублей</p>
+      </section>
+    </main>
+    <foooter>
+      <section>
+        <h2>Приглашаем к сотрудничеству дилеров!</h2>
+        <img src="#">
+      </section>
+      <img src="#">
+      <ul>
+        <li>ВКонтакте</li>
+        <li>Instagram</li>
+        <li>Facebook</li>
+      </ul>
+      <p>HTML Academy</p>
+      <img src="#">
+    </foooter>
   </body>
 </html>
