--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,109 +6,118 @@
   </head>
   <body>
     <header>
-      <h1>Функциональное питание для котов</h1>
-      <img scr="#">
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог продукции</a></li>
-        <li><a href="form.html">Подбор программы</a></li>
-      </ul>
+      <div class="page-header__wrapper">
+        <img class="page-header__logo" scr="#">
+        <ul class="page-header__list list-menu">
+          <li class="list-menu__item"><a href="index.html">Главная</a></li>
+          <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
+         <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
+        </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <h1>Каталог продукции</h1>
-        <ul>
-          <li>
-            <a href="#">
-              <h3>Cat Energy Pro 500г</h3>
-              <img src="#">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <h3>Cat Energy Pro 500г</h3>
-              <img src="#">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <h3>Cat Energy Pro 500г</h3>
-              <img src="#">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <h3>Cat Energy Pro 500г</h3>
-              <img src="#">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <h3>Cat Energy Pro 500г</h3>
-              <img src="#">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <h3>Cat Energy Pro 500г</h3>
-              <img src="#">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <h3>Cat Energy Pro 500г</h3>
-              <img src="#">
-            </a>
-          </li>
-        </ul>
-        <div>
-          <p>Показать еще 100500 товаров</p>
-          <p>На самом деле вкусов гораздо больше!</p>
-          <a href="#">Показать все</a>
+      <section class="catalog">
+        <div class="catalog__wrapper">
+          <h1>Каталог продукции</h1>
+          <ul class="catalog-list list-wrapper">
+            <li class="list-wrapper__item">
+              <a href="#">
+                <h3>Cat Energy Pro 500г</h3>
+                <img src="#">
+              </a>
+            </li>
+            <li class="list-wrapper__item">
+              <a href="#">
+                <h3>Cat Energy Pro 500г</h3>
+                <img src="#">
+              </a>
+            </li>
+            <li class="list-wrapper__item">
+               <a href="#">
+                <h3>Cat Energy Pro 500г</h3>
+                <img src="#">
+              </a>
+            </li>
+            <li class="list-wrapper__item">
+              <a href="#">
+                <h3>Cat Energy Pro 500г</h3>
+                <img src="#">
+              </a>
+            </li>
+            <li class="list-wrapper__item">
+              <a href="#">
+                <h3>Cat Energy Pro 500г</h3>
+                <img src="#">
+              </a>
+            </li>
+            <li class="list-wrapper__item">
+              <a href="#">
+                <h3>Cat Energy Pro 500г</h3>
+                <img src="#">
+              </a>
+            </li>
+            <li class="list-wrapper__item">
+              <a href="#">
+                <h3>Cat Energy Pro 500г</h3>
+                <img src="#">
+              </a>
+            </li>
+          </ul>
+          <div class="all-catalog">
+            <p class="all-catalog__heading">Показать еще 100500 товаров</p>
+            <p class="all-catalog__text">На самом деле вкусов гораздо больше!</p>
+            <a class="all-catalog__button" href="#">Показать все</a>
+          </div>
         </div>
       </section>
-      <section>
-        <h2>Дополнительные товары</h2>
-        <ul>
-          <li>
-            <p>Сахорозаменитель</p>
-            <p>1 упаковка (100г) 200 Р.</p>
-            <a href="#">Заказать</a>
-          </li>
-          <li>
-            <p>Питьевая вода</p>
-            <p>5 литров 50 Р.</p>
-            <a href="#">Заказать</a>
-          </li>
-          <li>
-            <p>Молоко</p>
-            <p>1 литр 100 Р.</p>
-            <a href="#">Заказать</a>
-          </li>
-          <li>
-            <p>Витамины</p>
-            <p>1 упаковка (30г) 300 Р.</p>
-            <a href="#">Заказать</a>
-          </li>
-        </ul>
+      <section class="additional-product">
+        <div class="additional-product__wrapper">
+          <h2>Дополнительные товары</h2>
+          <ul class="additional-product__list list-product">
+            <li class="list-product__item">
+              <p class="list-product__heading">Сахорозаменитель</p>
+              <p class="list-product__text">1 упаковка (100г) 200 Р.</p>
+              <a class="list-product__button" href="#">Заказать</a>
+            </li>
+            <li class="list-product__item">
+              <p class="list-product__heading">Питьевая вода</p>
+              <p class="list-product__text">5 литров 50 Р.</p>
+              <a class="list-product__button" href="#">Заказать</a>
+           </li>
+           <li class="list-product__item">
+              <p class="list-product__heading">Молоко</p>
+              <p class="list-product__text">1 литр 100 Р.</p>
+              <a class="list-product__button" href="#">Заказать</a>
+            </li>
+            <li class="list-product__item">
+              <p class="list-product__heading">Витамины</p>
+              <p class="list-product__text">1 упаковка (30г) 300 Р.</p>
+              <a class="list-product__button" href="#">Заказать</a>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
+      <section class="present">
         <p>Закажите все и получите чехол для кота в подарок!</p>
       </section>
     </main>
     <foooter>
-      <section>
-        <h2>Приглашаем к сотрудничеству дилеров!</h2>
-        <img src="#">
-      </section>
-      <img src="#">
-      <ul>
-        <li>ВКонтакте</li>
-        <li>Instagram</li>
-        <li>Facebook</li>
-      </ul>
-      <p>HTML Academy</p>
-      <img src="#">
+      <div class="psge-footer__wrapper">
+        <section class="psge-footer__map">
+          <h2>Приглашаем к сотрудничеству дилеров!</h2>
+          <img src="#">
+        </section>
+        <img class="page-footer__logo" src="#">
+        <ul class="page-footer_social list-social">
+          <li class="list-social__item">ВКонтакте</li>
+          <li class="list-social__item">Instagram</li>
+          <li class="list-social__item">Facebook</li>
+        </ul>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright_text">HTML Academy</p>
+          <img class="copyright_icon" src="#">
+        </div>
+      </div>
     </foooter>
   </body>
 </html>
