--- a/source/form.html
+++ b/source/form.html
@@ -6,65 +6,72 @@
   </head>
   <body>
     <header>
-      <h1>Функциональное питание для котов</h1>
-      <img scr="#">
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог продукции</a></li>
-        <li><a href="form.html">Подбор программы</a></li>
-      </ul>
+      <div class="page-header__wrapper">
+        <img class="page-header__logo" scr="#">
+        <ul class="page-header__list list-menu">
+          <li class="list-menu__item"><a href="index.html">Главная</a></li>
+          <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
+         <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
+        </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <h1>Подбор программы</h1>
-        <p>Заполните анкету и мы подберем программу питания для вашего кота</p>
-        <form action="https://echo.htmlacademy.ru/courses" method="post">
-          <fieldset>
-            <label>Имя:*<input type="text" name="catname" placeholder="Барсик" required></label>
-            <label>Вес (кг):*<input type="number" name="catweight" placeholder="7" required></label>
-            <label>Возраст (лет):<input type="number" name="catage" placeholder="7"></label>
-          </fieldset>
-          <fieldset>
-            <label><input type="radio" name="catradio" value="losingweight" checked>Похудение</label>
-            <label><input type="radio" name="catradio" value="weightgain">Набор веса</label>
-            <label><input type="radio" name="catradio" value="nothing">Не знаю (нужен ваш совет)</label>
-          </fieldset>
-          <fieldset>
-            <p>Контактные данные (владельца кота)</p>
-            <label>E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label>
-            <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" required></label>
-          </fieldset>
-          <fieldset>
-            <p>Комментарий</p>
-            <label id="comment">
-              <textarea id="comment" name="comment" placeholder="Расскажите о всех поводках кота" rows="8"></textarea>
-            </label>
-          </fieldset>
-          <fieldset>
-            <p>Дополнительно</p>
-            <label><input type="checkbox" name="sweetener" checked>Сахорозаменитель</label>
-            <label><input type="checkbox" name="Water">Питьевая вода</label>
-             <label><input type="checkbox" name="Milk">Молоко</label>
-             <label><input type="checkbox" name="Vitamins">Витамины</label>
-          </fieldset>
-          <input type="submit" value="Отправить заявку">
-          <p>* - обязательные поля формы</p>
-        </form>
+      <section class="profile">
+        <div class="profile__wrapper">
+          <h1 class="profile__heading">Подбор программы</h1>
+          <p class="profile__text">Заполните анкету и мы подберем программу питания для вашего кота</p>
+          <form class="profile__form form" action="https://echo.htmlacademy.ru/courses" method="post">
+            <fieldset class="form__info-cat">
+              <label>Имя:*<input type="text" name="catname" placeholder="Барсик" required></label>
+              <label>Вес (кг):*<input type="number" name="catweight" placeholder="7" required></label>
+              <label>Возраст (лет):<input type="number" name="catage" placeholder="7"></label>
+            </fieldset>
+            <fieldset class="form__weight">
+              <label><input type="radio" name="catradio" value="losingweight" checked>Похудение</label>
+              <label><input type="radio" name="catradio" value="weightgain">Набор веса</label>
+              <label><input type="radio" name="catradio" value="nothing">Не знаю (нужен ваш совет)</label>
+            </fieldset>
+            <fieldset class="form__owner">
+              <p>Контактные данные (владельца кота)</p>
+              <label>E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label>
+              <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" required></label>
+            </fieldset>
+            <fieldset class="form__comment">
+              <p>Комментарий</p>
+              <label id="comment">
+                <textarea id="comment" name="comment" placeholder="Расскажите о всех поводках кота" rows="8"></textarea>
+              </label>
+            </fieldset>
+            <fieldset class="form__additional">
+              <p>Дополнительно</p>
+              <label><input type="checkbox" name="sweetener" checked>Сахорозаменитель</label>
+              <label><input type="checkbox" name="Water">Питьевая вода</label>
+              <label><input type="checkbox" name="Milk">Молоко</label>
+              <label><input type="checkbox" name="Vitamins">Витамины</label>
+            </fieldset>
+            <input type="submit" value="Отправить заявку">
+            <p class="form__text">* - обязательные поля формы</p>
+          </form>
+        </div>
       </section>
     </main>
     <foooter>
-      <section>
-        <h2>Приглашаем к сотрудничеству дилеров!</h2>
-        <img src="#">
-      </section>
-      <img src="#">
-      <ul>
-        <li>ВКонтакте</li>
-        <li>Instagram</li>
-        <li>Facebook</li>
-      </ul>
-      <p>HTML Academy</p>
-      <img src="#">
+      <div class="psge-footer__wrapper">
+        <section class="psge-footer__map">
+          <h2>Приглашаем к сотрудничеству дилеров!</h2>
+          <img src="#">
+        </section>
+        <img class="page-footer__logo" src="#">
+        <ul class="page-footer_social list-social">
+          <li class="list-social__item">ВКонтакте</li>
+          <li class="list-social__item">Instagram</li>
+          <li class="list-social__item">Facebook</li>
+        </ul>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright_text">HTML Academy</p>
+          <img class="copyright_icon" src="#">
+        </div>
+      </div>
     </foooter>
   </body>
 </html>
