Внесла первые правки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,73 +5,68 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-    <header>
-      <div class="page-header__wrapper">
+    <header class="page-header">
         <img class="page-header__logo" scr="#">
         <ul class="page-header__list list-menu">
           <li class="list-menu__item"><a href="index.html">Главная</a></li>
           <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
          <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
         </ul>
-      </div>
     </header>
     <main>
       <section class="catalog">
-        <div class="catalog__wrapper">
           <h1>Каталог продукции</h1>
-          <ul class="catalog-list list-wrapper">
-            <li class="list-wrapper__item">
+          <ul class="catalog-list">
+            <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#">
               </a>
             </li>
-            <li class="list-wrapper__item">
+            <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#">
               </a>
             </li>
-            <li class="list-wrapper__item">
+            <li class="catalog-list__item">
                <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#">
               </a>
             </li>
-            <li class="list-wrapper__item">
+            <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#">
               </a>
             </li>
-            <li class="list-wrapper__item">
+            <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#">
               </a>
             </li>
-            <li class="list-wrapper__item">
+            <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#">
               </a>
             </li>
-            <li class="list-wrapper__item">
+            <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#">
               </a>
             </li>
           </ul>
-          <div class="all-catalog">
-            <p class="all-catalog__heading">Показать еще 100500 товаров</p>
-            <p class="all-catalog__text">На самом деле вкусов гораздо больше!</p>
-            <a class="all-catalog__button" href="#">Показать все</a>
+          <div class="catalog-product">
+            <p class="catalog-product__heading">Показать еще 100500 товаров</p>
+            <p class="catalog-product__text">На самом деле вкусов гораздо больше!</p>
+            <a class="catalog-product__button" href="#">Показать все</a>
           </div>
-        </div>
       </section>
       <section class="additional-product">
-        <div class="additional-product__wrapper">
           <h2>Дополнительные товары</h2>
           <ul class="additional-product__list list-product">
             <li class="list-product__item">
@@ -95,14 +90,12 @@
               <a class="list-product__button" href="#">Заказать</a>
             </li>
           </ul>
-        </div>
       </section>
       <section class="present">
         <p>Закажите все и получите чехол для кота в подарок!</p>
       </section>
     </main>
-    <foooter>
-      <div class="psge-footer__wrapper">
+    <foooter class="page-footer">
         <section class="psge-footer__map">
           <h2>Приглашаем к сотрудничеству дилеров!</h2>
           <img src="#">
@@ -114,10 +107,9 @@
           <li class="list-social__item">Facebook</li>
         </ul>
         <div class="page-footer__copyright copyright">
-          <p class="copyright_text">HTML Academy</p>
+          <p class="copyright__text">HTML Academy</p>
           <img class="copyright_icon" src="#">
         </div>
-      </div>
     </foooter>
   </body>
 </html>
