--- a/source/form.html
+++ b/source/form.html
@@ -5,19 +5,16 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-    <header>
-      <div class="page-header__wrapper">
+    <header class="page-header">
         <img class="page-header__logo" scr="#">
         <ul class="page-header__list list-menu">
           <li class="list-menu__item"><a href="index.html">Главная</a></li>
           <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
          <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
         </ul>
-      </div>
     </header>
     <main>
       <section class="profile">
-        <div class="profile__wrapper">
           <h1 class="profile__heading">Подбор программы</h1>
           <p class="profile__text">Заполните анкету и мы подберем программу питания для вашего кота</p>
           <form class="profile__form form" action="https://echo.htmlacademy.ru/courses" method="post">
@@ -38,8 +35,8 @@
             </fieldset>
             <fieldset class="form__comment">
               <p>Комментарий</p>
-              <label id="comment">
-                <textarea id="comment" name="comment" placeholder="Расскажите о всех поводках кота" rows="8"></textarea>
+              <label>
+                <textarea name="comment" placeholder="Расскажите о всех поводках кота" rows="8"></textarea>
               </label>
             </fieldset>
             <fieldset class="form__additional">
@@ -52,11 +49,9 @@
             <input type="submit" value="Отправить заявку">
             <p class="form__text">* - обязательные поля формы</p>
           </form>
-        </div>
       </section>
     </main>
-    <foooter>
-      <div class="psge-footer__wrapper">
+    <foooter class="page-footer">
         <section class="psge-footer__map">
           <h2>Приглашаем к сотрудничеству дилеров!</h2>
           <img src="#">
@@ -71,7 +66,6 @@
           <p class="copyright_text">HTML Academy</p>
           <img class="copyright_icon" src="#">
         </div>
-      </div>
     </foooter>
   </body>
 </html>
