--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"></meta>
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__wrapper">
         <h1 class="page-header__h1">Функциональное питание для котов</h1>
         <p class="page-header__text">Занялся собой? Займись котом!</p>
         <img class="page-header__banner" src="#">
@@ -17,26 +16,22 @@
          <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
         </ul>
         <a class="page-header__button" href="form.html">Подобрать программу</a>
-      </div>
     </header>
     <main>
       <section class="program">
-        <div class="program__wrapper">
           <h2>Виды программ</h2>
-          <div class="program__weight losingweight">
+          <div class="program__weight weight">
             <h3>Похудение</h3>
-            <p class="losingweight__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="losingweight__button" href="#">Каталог SLIM</a>
+            <p class="weight__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="weight__button" href="#">Каталог SLIM</a>
           </div>
-          <div class="program__weight weightgain">
+          <div class="program__weight weight">
             <h3>Набор массы</h3>
-            <p class="weightgain__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="weightgain__button" href="#">Каталог PRO</a>
+            <p class="weight__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="weight__button" href="#">Каталог PRO</a>
           </div>
-        </div>
       </section>
       <section class="advantages">
-        <div class="advantages__wrapper">
           <h2>Как это работает?</h2>
           <ul class="advantages__list list-page">
             <li class="list-page__item">Функциональное питание содержит только полезные питательные вещества.</li>
@@ -44,10 +39,8 @@
             <li class="list-page__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
             <li class="list-page__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
           </ul>
-        </div>
       </section>
       <section class="example">
-        <div class="example__wrapper">
           <h2>Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <div class="example__block">
@@ -59,11 +52,9 @@
             <p>Затрачено времени</p>
           </div>
           <p class="example__text">Затраты напитание: 15 000 рублей</p>
-      </div>
       </section>
     </main>
     <foooter class="page-footer">
-      <div class="psge-footer__wrapper">
         <section class="psge-footer__map">
           <h2>Приглашаем к сотрудничеству дилеров!</h2>
           <img src="#">
@@ -78,7 +69,6 @@
           <p class="copyright_text">HTML Academy</p>
           <img class="copyright_icon" src="#">
         </div>
-      </div>
     </foooter>
   </body>
 </html>
