--- a/source/form.html
+++ b/source/form.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
     <header class="page-header">
-        <img class="page-header__logo" scr="#">
+        <img class="page-header__logo" scr="#"/>
         <ul class="page-header__list list-menu">
           <li class="list-menu__item"><a href="index.html">Главная</a></li>
           <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
@@ -50,13 +50,13 @@
             <p class="form__text">* - обязательные поля формы</p>
           </form>
       </section>
+      <section class="page-footer__map">
+        <h2>Приглашаем к сотрудничеству дилеров!</h2>
+        <img src="#"/>
+      </section>
     </main>
     <foooter class="page-footer">
-        <section class="psge-footer__map">
-          <h2>Приглашаем к сотрудничеству дилеров!</h2>
-          <img src="#">
-        </section>
-        <img class="page-footer__logo" src="#">
+        <img class="page-footer__logo" src="#"/>
         <ul class="page-footer_social list-social">
           <li class="list-social__item">ВКонтакте</li>
           <li class="list-social__item">Instagram</li>
@@ -64,7 +64,7 @@
         </ul>
         <div class="page-footer__copyright copyright">
           <p class="copyright_text">HTML Academy</p>
-          <img class="copyright_icon" src="#">
+          <img class="copyright_icon" src="#"/>
         </div>
     </foooter>
   </body>
