--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
     <header class="page-header">
-        <img class="page-header__logo" scr="#">
+        <img class="page-header__logo" scr="#"/>
         <ul class="page-header__list list-menu">
           <li class="list-menu__item"><a href="index.html">Главная</a></li>
           <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
@@ -20,50 +20,50 @@
             <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
-                <img src="#">
+                <img src="#"/>
               </a>
             </li>
             <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
-                <img src="#">
+                <img src="#"/>
               </a>
             </li>
             <li class="catalog-list__item">
                <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
-                <img src="#">
+                <img src="#"/>
               </a>
             </li>
             <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
-                <img src="#">
+                <img src="#"/>
               </a>
             </li>
             <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
-                <img src="#">
+                <img src="#"/>
               </a>
             </li>
             <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
-                <img src="#">
+                <img src="#"/>
               </a>
             </li>
             <li class="catalog-list__item">
               <a href="#">
                 <h3>Cat Energy Pro 500г</h3>
-                <img src="#">
+                <img src="#"/>
               </a>
             </li>
           </ul>
           <div class="catalog-product">
             <p class="catalog-product__heading">Показать еще 100500 товаров</p>
             <p class="catalog-product__text">На самом деле вкусов гораздо больше!</p>
-            <a class="catalog-product__button" href="#">Показать все</a>
+            <a class="catalog-product__link" href="#">Показать все</a>
           </div>
       </section>
       <section class="additional-product">
@@ -72,35 +72,35 @@
             <li class="list-product__item">
               <p class="list-product__heading">Сахорозаменитель</p>
               <p class="list-product__text">1 упаковка (100г) 200 Р.</p>
-              <a class="list-product__button" href="#">Заказать</a>
+              <a class="list-product__link" href="#">Заказать</a>
             </li>
             <li class="list-product__item">
               <p class="list-product__heading">Питьевая вода</p>
               <p class="list-product__text">5 литров 50 Р.</p>
-              <a class="list-product__button" href="#">Заказать</a>
+              <a class="list-product__link" href="#">Заказать</a>
            </li>
            <li class="list-product__item">
               <p class="list-product__heading">Молоко</p>
               <p class="list-product__text">1 литр 100 Р.</p>
-              <a class="list-product__button" href="#">Заказать</a>
+              <a class="list-product__link" href="#">Заказать</a>
             </li>
             <li class="list-product__item">
               <p class="list-product__heading">Витамины</p>
               <p class="list-product__text">1 упаковка (30г) 300 Р.</p>
-              <a class="list-product__button" href="#">Заказать</a>
+              <a class="list-product__link" href="#">Заказать</a>
             </li>
           </ul>
       </section>
       <section class="present">
         <p>Закажите все и получите чехол для кота в подарок!</p>
       </section>
+      <section class="page-footer__map">
+        <h2>Приглашаем к сотрудничеству дилеров!</h2>
+        <img src="#"/>
+      </section>
     </main>
     <foooter class="page-footer">
-        <section class="psge-footer__map">
-          <h2>Приглашаем к сотрудничеству дилеров!</h2>
-          <img src="#">
-        </section>
-        <img class="page-footer__logo" src="#">
+        <img class="page-footer__logo" src="#"/>
         <ul class="page-footer_social list-social">
           <li class="list-social__item">ВКонтакте</li>
           <li class="list-social__item">Instagram</li>
@@ -108,7 +108,7 @@
         </ul>
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">HTML Academy</p>
-          <img class="copyright_icon" src="#">
+          <img class="copyright_icon" src="#"/>
         </div>
     </foooter>
   </body>
