--- a/source/index.html
+++ b/source/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8"></meta>
+    <meta charset="utf-8"/>
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
     <header class="page-header">
         <h1 class="page-header__h1">Функциональное питание для котов</h1>
         <p class="page-header__text">Занялся собой? Займись котом!</p>
-        <img class="page-header__banner" src="#">
-        <img class="page-header__logo" scr="#">
+        <img class="page-header__banner" src="#"/>
+        <img class="page-header__logo" scr="#"/>
         <ul class="page-header__list list-menu">
           <li class="list-menu__item"><a href="#">Главная</a></li>
           <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
          <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
         </ul>
-        <a class="page-header__button" href="form.html">Подобрать программу</a>
+        <a class="page-header__link" href="form.html">Подобрать программу</a>
     </header>
     <main>
       <section class="program">
@@ -23,12 +23,12 @@
           <div class="program__weight weight">
             <h3>Похудение</h3>
             <p class="weight__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="weight__button" href="#">Каталог SLIM</a>
+            <a class="weight__link" href="#">Каталог SLIM</a>
           </div>
           <div class="program__weight weight">
             <h3>Набор массы</h3>
             <p class="weight__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="weight__button" href="#">Каталог PRO</a>
+            <a class="weight__link" href="#">Каталог PRO</a>
           </div>
       </section>
       <section class="advantages">
@@ -53,13 +53,13 @@
           </div>
           <p class="example__text">Затраты напитание: 15 000 рублей</p>
       </section>
+      <section class="page-footer__map">
+        <h2>Приглашаем к сотрудничеству дилеров!</h2>
+        <img src="#"/>
+      </section>
     </main>
     <foooter class="page-footer">
-        <section class="psge-footer__map">
-          <h2>Приглашаем к сотрудничеству дилеров!</h2>
-          <img src="#">
-        </section>
-        <img class="page-footer__logo" src="#">
+        <img class="page-footer__logo" src="#"/>
         <ul class="page-footer_social list-social">
           <li class="list-social__item">ВКонтакте</li>
           <li class="list-social__item">Instagram</li>
@@ -67,7 +67,7 @@
         </ul>
         <div class="page-footer__copyright copyright">
           <p class="copyright_text">HTML Academy</p>
-          <img class="copyright_icon" src="#">
+          <img class="copyright_icon" src="#"/>
         </div>
     </foooter>
   </body>
