Исправила название секции с картой

--- a/source/form.html
+++ b/source/form.html
@@ -50,7 +50,7 @@
             <p class="form__text">* - обязательные поля формы</p>
           </form>
       </section>
-      <section class="page-footer__map">
+      <section class="map">
         <h2>Приглашаем к сотрудничеству дилеров!</h2>
         <img src="#"/>
       </section>
