--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
           </div>
           <p class="example__text">Затраты напитание: 15 000 рублей</p>
       </section>
-      <section class="page-footer__map">
+      <section class="map">
         <h2>Приглашаем к сотрудничеству дилеров!</h2>
         <img src="#"/>
       </section>
