--- a/source/catalog.html
+++ b/source/catalog.html
@@ -94,7 +94,7 @@
       <section class="present">
         <p>Закажите все и получите чехол для кота в подарок!</p>
       </section>
-      <section class="page-footer__map">
+      <section class="map">
         <h2>Приглашаем к сотрудничеству дилеров!</h2>
         <img src="#"/>
       </section>
