Начала вёрстку с препроцессором

--- a/source/form.html
+++ b/source/form.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8"/>
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
     <header class="page-header">
         <img class="page-header__logo" scr="#"/>
         <ul class="page-header__list list-menu">
-          <li class="list-menu__item"><a href="index.html">Главная</a></li>
-          <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
-         <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
+          <li class="list-menu__item"><a class="list-menu__link" href="index.html">Главная</a></li>
+          <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
+         <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
     </header>
     <main>
@@ -52,6 +54,7 @@
       </section>
       <section class="map">
         <h2>Приглашаем к сотрудничеству дилеров!</h2>
+        <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <img src="#"/>
       </section>
     </main>
