--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,61 +3,84 @@
   <head>
     <meta charset="utf-8"/>
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
     <header class="page-header">
         <img class="page-header__logo" scr="#"/>
         <ul class="page-header__list list-menu">
-          <li class="list-menu__item"><a href="index.html">Главная</a></li>
-          <li class="list-menu__item"><a href="catalog.html">Каталог продукции</a></li>
-         <li class="list-menu__item"><a href="form.html">Подбор программы</a></li>
+          <li class="list-menu__item"><a class="list-menu__link" href="index.html">Главная</a></li>
+          <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
+         <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
     </header>
     <main>
       <section class="catalog">
           <h1>Каталог продукции</h1>
           <ul class="catalog-list">
-            <li class="catalog-list__item">
-              <a href="#">
+            <li class="catalog-list__item item-catalog">
+              <a class="item-catalog__link" href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#"/>
               </a>
+              <p>Объем Вкус Цена</p>
+              <p>500 г Курица 700 Р.</p>
+              <a class="item-catalog__link-button">Заказать</a>
             </li>
-            <li class="catalog-list__item">
-              <a href="#">
-                <h3>Cat Energy Pro 500г</h3>
+            <li class="catalog-list__item item-catalog">
+              <a class="item-catalog__link" href="#">
+                <h3>Cat Energy Pro 1000г</h3>
                 <img src="#"/>
               </a>
+              <p>Объем Вкус Цена</p>
+              <p>1000 г Курица 1000 Р.</p>
+              <a class="item-catalog__link-button">Заказать</a>
             </li>
-            <li class="catalog-list__item">
-               <a href="#">
+            <li class="catalog-list__item item-catalog">
+               <a class="item-catalog__link" href="#">
                 <h3>Cat Energy Pro 500г</h3>
                 <img src="#"/>
               </a>
+              <p>Объем Вкус Цена</p>
+              <p>500 г Рыба 700 Р.</p>
+              <a class="item-catalog__link-button">Заказать</a>
             </li>
-            <li class="catalog-list__item">
-              <a href="#">
-                <h3>Cat Energy Pro 500г</h3>
+            <li class="catalog-list__item item-catalog">
+              <a class="item-catalog__link" href="#">
+                <h3>Cat Energy Pro 1000г</h3>
                 <img src="#"/>
               </a>
+              <p>Объем Вкус Цена</p>
+              <p>1000 г Рыба 1000 Р.</p>
+              <a class="item-catalog__link-button">Заказать</a>
             </li>
-            <li class="catalog-list__item">
-              <a href="#">
-                <h3>Cat Energy Pro 500г</h3>
+            <li class="catalog-list__item item-catalog">
+              <a class="item-catalog__link" href="#">
+                <h3>Cat Energy Slim 500г</h3>
                 <img src="#"/>
               </a>
+              <p>Объем Вкус Цена</p>
+              <p>500 г Гречка 400 Р.</p>
+              <a class="item-catalog__link-button">Заказать</a>
             </li>
-            <li class="catalog-list__item">
-              <a href="#">
-                <h3>Cat Energy Pro 500г</h3>
+            <li class="catalog-list__item item-catalog">
+              <a class="item-catalog__link" href="#">
+                <h3>Cat Energy Slim 500г</h3>
                 <img src="#"/>
               </a>
+              <p>Объем Вкус Цена</p>
+              <p>1000 г Гречка 500 Р.</p>
+              <a class="item-catalog__link-button">Заказать</a>
             </li>
-            <li class="catalog-list__item">
-              <a href="#">
-                <h3>Cat Energy Pro 500г</h3>
+            <li class="catalog-list__item item-catalog">
+              <a class="item-catalog__link" href="#">
+                <h3>Cat Energy Slim 500г</h3>
                 <img src="#"/>
               </a>
+              <p>Объем Вкус Цена</p>
+              <p>500 г Рис 400 Р.</p>
+              <a class="item-catalog__link-button">Заказать</a>
             </li>
           </ul>
           <div class="catalog-product">
@@ -96,6 +119,7 @@
       </section>
       <section class="map">
         <h2>Приглашаем к сотрудничеству дилеров!</h2>
+        <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <img src="#"/>
       </section>
     </main>
