--- a/source/index.html
+++ b/source/index.html
@@ -61,6 +61,7 @@
         <div class="expamle__wrapper">
           <h2>Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <div class="examle__tablet">
           <div class="example__block block">
           <div class="block__weight">
             <h3 class="block__heading">5 кг</h3>
@@ -72,14 +73,15 @@
           </div>
         </div>
           <p class="example__text">Затраты на питание: 15 000 руб.</p>
+          </div>
         <div class="example__slider slider">
           <div class="slider__befor">
-            <img src="../img/before-mobile@1x.png" width="300" height="245" alt="Изображение кота Бориса до пухедения">
+            <div class="slider__img img__befor"></div>
             <button type="button">Далее</button>
             <p>До</p>
           </div>
           <div class="slider__after">
-            <img src="../img/after-mobile@1x.png" width="280" height="245" alt="Изображение кота Бориса до пухедения">
+            <div class="slider__img img__after"></div>
             <button type="button">Назад</button>
             <p>После</p>
           </div>
