--- a/source/form.html
+++ b/source/form.html
@@ -62,7 +62,7 @@
           </div>
       </section>
       <section class="map">
-        <div class="map__wrapper">
+        <div class="map__wrapper  wrapper--grey">
            <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
            <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
