Продолжаем десктопную версию

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,13 +7,13 @@
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <header class="page-header">
-      <div class="page-header__wrapper nav--nojs nav--opened">
+    <header class="page-header nav--opened">
+      <div class="page-header__wrapper nav--nojs">
         <div class="page-header__nav nav">
           <div class="nav__logo"></div>
           <button type="button" class="nav__button">Меню</button>
         </div>
-        <ul class="page-header__list list-menu">
+        <ul class="page-header__list list-menu menu-desktop">
           <li class="list-menu__item"><a class="list-menu__link" href="index.html">Главная</a></li>
           <li class="list-menu__item"><a class="list-menu__link link-off list-menu__item--activ"  href="#">Каталог продукции</a></li>
          <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
