--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,8 @@
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <header class="page-header">
-      <div class="page-header__wrapper nav--nojs nav--opened">
+    <header class="page-header nav--opened">
+      <div class="page-header__wrapper nav--nojs">
         <div class="page-header__nav nav">
           <div class="nav__logo"></div>
           <button type="button" class="nav__button">Меню</button>
@@ -22,11 +22,15 @@
     </header>
     <main>
       <section class="cover">
-        <div class="cover__wrapper">
-        <h1 class="cover__h1">Функциональное питание для котов</h1>
-        <p class="cover__text">Занялся собой? Займись котом!</p>
+        <div class="cover__wrapper cover-text">
+          <div class="cover_bg-dekstop"></div>
+          <div class="cover-text__wrapper">
+           <h1 class="cover__h1">Функциональное питание для котов</h1>
+           <p class="cover__text">Занялся собой? Займись котом!</p>
+           <a class="cover__link" href="form.html">Подобрать программу</a>
+          </div>
         <div class="cover__food"></div>
-        <a class="cover__link" href="form.html">Подобрать программу</a>
+
       </div>
       </section>
       <section class="program">
@@ -38,7 +42,7 @@
             <a class="weight__link" href="#">Каталог SLIM</a>
             </div>
           </div>
-          <div class="program__weight weight">
+          <div class="program__weight weight weight--pro">
             <div class="weight__wrapper">
             <h3 class="weight__pro">Набор массы</h3>
             <p class="weight__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
@@ -58,7 +62,9 @@
         </div>
       </section>
       <section class="example">
+        <div class="example__bgc"></div>
         <div class="expamle__wrapper">
+          <div class="example__desktop">
           <h2>Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <div class="examle__tablet">
@@ -73,6 +79,7 @@
           </div>
         </div>
           <p class="example__text">Затраты на питание: 15 000 руб.</p>
+          </div>
           </div>
         <div class="example__slider slider">
           <div class="slider__befor">
