Верстка страницы формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
     <header class="page-header nav--opened">
       <div class="page-header__wrapper nav--nojs">
         <div class="page-header__nav nav">
-          <div class="nav__logo"></div>
+          <a href="index.html" class="nav__link-logo"><div class="nav__logo"></div></a>
           <button type="button" class="nav__button">Меню</button>
         </div>
         <ul class="page-header__list list-menu menu-desktop">
@@ -278,7 +278,7 @@
     <foooter class="page-footer">
       <div class="page-footer__wrapper">
         <ul class="page-footer__list">
-        <li><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></li>
+          <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
         <li><ul class="page-footer__social list-social">
           <li><a href="#" class="list-social__vk"></a></li>
           <li><a href="#" class="list-social__ins"></a></li>
