--- a/source/index.html
+++ b/source/index.html
@@ -108,7 +108,7 @@
     <foooter class="page-footer">
       <div class="page-footer__wrapper">
         <ul class="page-footer__list">
-        <li><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></li>
+        <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
         <li><ul class="page-footer__social list-social">
           <li><a href="#" class="list-social__vk"></a></li>
           <li><a href="#" class="list-social__ins"></a></li>
