--- a/source/form.html
+++ b/source/form.html
@@ -43,13 +43,13 @@
             <fieldset class="form__weight">
               <ul>
                 <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="losingweight" checked class="visually-hidden"><span class="checkbox-radio"></span>Похудение</label></li><br>
-                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="weightgain" class="visually-hidden"><span class="checkbox-radio"></span>Набор веса</label></li><br>
+                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="weightgain" class="visually-hidden"><span class="checkbox-radio"></span>Набор массы</label></li><br>
                 <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="nothing" class="visually-hidden"><span class="checkbox-radio"></span>Не знаю (нужен ваш совет)</label></li>
               </ul>
             </fieldset>
             </div>
             <fieldset class="form__owner owner">
-              <legend class="form__legend legend__data"></p>Контактные данные (владельца кота)</legend>
+              <legend class="form__legend legend__data">Контактные данные (владельца кота)</legend>
               <div class="owner__label">
               <label>E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label><br>
               <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" required></label>
@@ -58,13 +58,13 @@
             <fieldset class="form__comment">
               <legend class="form__legend legend__comment">Комментарий</legend>
               <label>
-                <textarea name="comment" placeholder="Расскажите о всех поводках кота" rows="8"></textarea>
+                <textarea name="comment" placeholder="Расскажите обо всех повадках кота" rows="8"></textarea>
               </label>
             </fieldset>
             <fieldset class="form__additional">
               <legend class="form__legend legend__add">Дополнительно</legend>
               <ul class="form__additional__list-check">
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="sweetener" checked><span class="checkbox-indicator"></span>Сахорозаменитель</label><br></li>
+                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="sweetener" checked><span class="checkbox-indicator"></span>Сахарозаменитель</label><br></li>
                   <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Water"><span class="checkbox-indicator"></span>Питьевая вода</label><br></li>
                   <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Milk"><span class="checkbox-indicator"></span>Молоко</label><br></li>
                   <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Vitamins"><span class="checkbox-indicator"></span>Витамины</label></li>
@@ -72,7 +72,7 @@
             </fieldset>
             <div class="form__button-text">
             <input class="form__button" type="submit" value="Отправить заявку">
-            <p class="form__text">* - обязательные поля формы</p>
+            <p class="form__text">* - Обязательные поля</p>
             </div>
           </form>
           </div>
